# UTFPR

./: .gitattributes  .gitignore  README.md
Logica Reconfiguravel/BRAM/: BRAM.qpf  BRAM.qsf  BRAM.qws  BRAM.vhd  BRAM_tb.vhd  RAM.qip  RAM.vhd  RAM_inst.vhd
Logica Reconfiguravel/Bit Counter/: BitCounter.qpf  BitCounter.qsf  BitCounter.qws  BitCounter.vhd  BitCounter_tb.vhd
Logica Reconfiguravel/Contador  57/: Cont_57.qpf  Cont_57.qsf  Cont_57.qws  Cont_57.vhd  Cont_57_tb.vhd  Contador.vhd  Contador_tb.vhd
Logica Reconfiguravel/Cronometro/: BCD.vhd  Botao.vhd  Contador.vhd  Cronometro.qpf  Cronometro.qsf  Cronometro.qws  Cronometro.vhd  Cronometro_tb.vhd  Frequencia.vhd
Logica Reconfiguravel/SemaforoNet/: DE2_NET.asm.rpt  DE2_NET.done  DE2_NET.fit.rpt  DE2_NET.fit.summary  DE2_NET.flow.rpt  DE2_NET.jdi  DE2_NET.map.rpt  DE2_NET.map.smsg  DE2_NET.map.summary  DE2_NET.pof  DE2_NET.qsf  DE2_NET.qws  DE2_NET.sta.rpt  DE2_NET.v  DE2_NET_time_limited.cdf  DE2_NET_time_limited.sof  SDRAM_PLL.qip  SDRAM_PLL.v  SemaforoNet_hw.tcl  system_0.bsf  system_0.cmp  system_0.html  system_0.qsys  system_0.sopcinfo  system_0_generation.rpt  system_0_generation_1.rpt  system_0_generation_2.rpt
Logica Reconfiguravel/SemaforoNet/.qsys_edit/: preferences.xml
Logica Reconfiguravel/SemaforoNet/hardware/: Reg.vhd  Timer.vhd  Top_Avalon.qpf  Top_Avalon.qsf  Top_Avalon.vhd
Oficina De Integração III/Backend/: README.md
Oficina De Integração III/Embedded/: README.md
Oficina De Integração III/Frontend/: README.md
Oficina De Integração III/Inference/: README.md
Oficina de Integracao III/: README.md
Oficina de Integracao III/Backend/: README.md  app.py  requirements.txt  run-postgree-docker.sh
Oficina de Integracao III/Backend/docs/: Oficina3.postman_collection.json
Oficina de Integracao III/Backend/models/: MobileNetV2_150E_6C.hdf5
Oficina de Integracao III/Backend/src/: config.py  database.py  exceptions.py
Oficina de Integracao III/Inference/: README.md  Requirements.txt
Oficina de Integracao III/SmartRecycler_NeuralNetwork/: Requirements.txt  config.py  predict.py  train.py
Oficina de Integracao III/Technical Report/: Bibliography.bib  SmartRecycler.tex
Redes de Computadores/: README.md
Redes de Computadores/Chat/: client.py  server.py
SIstemas Operacionais/PPOS/: CMakeLists.txt
SIstemas Operacionais/PPOS/cmake/: FindPPOS.cmake
SIstemas Operacionais/PPOS/docs/: Espera Ocupada.odt
SIstemas Operacionais/PPOS/source/: disk.c  pingpong-contab-prio.c  pingpong-disco1.c  pingpong-disco2.c  pingpong-join.c  pingpong-mqueue.c  pingpong-preempcao-stress.c  pingpong-preempcao.c  pingpong-prodcons.c  pingpong-racecond.c  pingpong-scheduler.c  pingpong-semaphore.c  pingpong-sleep.c  ppos-core-aux.c  ppos-core.c  queue.c  signal.c  timer.c
SIstemas Operacionais/PPOS/test/: leitor_escritor.c  main.c  pingpong-barrier.c  pingpong-contab-prio.c  pingpong-disco1.c  pingpong-disco2.c  pingpong-dispatcher.c  pingpong-preempcao-stress.c  pingpong-prodcons.c  pingpong-scheduler.c  pingpong-semaphore.c  pingpong-sleep.c  pingpong-tasks1.c  pingpong-tasks2.c  pingpong-tasks3.c  temporizado.c  testafila.c
Sistemas Distribuidos/RabbitMQ/: RabbitMQ.sln
Sistemas Distribuidos/auction/: client.py  form.py  requirements.txt  server.py
Sistemas Embarcados/Elevador/: CMakeLists.txt
Sistemas Embarcados/Lab 1/: CMakeLists.txt
Sistemas Embarcados/Lab 2/: CMakeLists.txt
Sistemas Embarcados/Lab 4/: CMakeLists.txt
Sistemas Embarcados/Lab 5/: CMakeLists.txt
Sistemas Embarcados/Lab 6/: CMakeLists.txt  platformio.ini
(+184 files in other folders)
